# PXMC3000-data-agent

./: CMakeLists.txt  CMakePresets.json  azure-pipelines.yml
CICD/: PXMC3000-data-agent.yml
SmpDataAgent/: CMakeLists.txt  SmpDataAgent.cpp  vcpkg_ref.txt
SmpDataAgent/data/entities/: firmware.h  hardware.h
SmpHttpClient/: CMakeLists.txt  SmpHttpClient.cpp  SmpHttpClient.h  vcpkg_ref.txt
SmpHttpClient/Database/: SMPConfiguration.db
SmpHttpClient/data/dataAccess/: sqlite3DataAccess.cpp  sqlite3DataAccess.h
SmpHttpClient/data/entities/: firmware.h  hardware.h  settings.h  smpDevice.h
